Integration new structure for app page - Align issue

--- a/client/app/site/apps/show/app-page.less
+++ b/client/app/site/apps/show/app-page.less
@@ -6,6 +6,8 @@
 
     .app-page-img-container{
         margin-left:33px;
+        width: 180px;
+        float: left;
         img{
               margin: 0 -5px 20px;
               transform: translateZ(0);
@@ -22,16 +24,9 @@
           width: 130px;
         }
     }
-    .col-md-2{
-      padding-left:0;
-      padding-right:20px;
-    }
-    .col-md-2, .col-sm-3{
-      width:200px;
-    }
     @media (min-width: 768px){
       .col-sm-9{
-        width:73%;
+        width:71%;
       }
     }
     @media (min-width: 992px){
@@ -43,12 +38,12 @@
     }
     @media (min-width: 1217px){
       .col-sm-9{
-        width:81%;
+        width:80%;
       }
     }
       @media (min-width: 1400px){
         .col-sm-9{
-          width:84%;
+          width:83%;
       }
     }
     .app-screens-container{
